final errors fixed

--- a/Mycura/Services.html
+++ b/Mycura/Services.html
@@ -8,7 +8,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="/Mycura/assets/css/Services style.css">
+        <link rel="stylesheet" href="./assets/css/Services style.css">
         <a href="https://storyset.com/data"></a>
 
         <title>Services</title>
