--- a/Mycura/index.html
+++ b/Mycura/index.html
@@ -122,7 +122,7 @@
                     <div class="contact__data">
                         <span class="section-subtitle contact__initial">Let's talk</span>
                         <h2 class="section-title contact__initial">Contact us</h2>
-                        <p class="contact__description">we're here to assit you with any questions or inquiries you may have. whether you need technical support,have a partnership opportunity,want to learn more about our services,feel free to get in touch with us.</p>
+                        <p class="contact__description">we're here to assists you with any questions or inquiries you may have. whether you need technical support,have a partnership opportunity,want to learn more about our services,feel free to get in touch with us.</p>
                     </div>
 
                     <div class="contact__button">
