--- a/Mycura/Services.html
+++ b/Mycura/Services.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="home_para">
                     
-                    <p>Since 2007, Mycura has been dedicated to offering comprehensive, full-cycle software development services. We specialize in assisting companies in project launches, the integration of cutting-edge technologies, the transition to digital-first strategies, and the overall expansion of their enterprises. With a track record of over 600 successfully delivered customized software solutions, Mycura has earned the trust of startups, SMBs, and Fortune 500 corporations across North America, Europe, Australia, Singapore, Hong Kong, and other global regions. Our mission revolves around empowering our clients to enhance customer and employee experiences, attain competitive edges, and optimize internal operational efficiency.</p> <br>
+                    <p>Since 2008, Mycura has been dedicated to offering comprehensive, full-cycle software development services. We specialize in assisting companies in project launches, the integration of cutting-edge technologies, the transition to digital-first strategies, and the overall expansion of their enterprises. With a track record of over 600 successfully delivered customized software solutions, Mycura has earned the trust of startups, SMBs, and Fortune 500 corporations across North America, Europe, Australia, Singapore, Hong Kong, and other global regions. Our mission revolves around empowering our clients to enhance customer and employee experiences, attain competitive edges, and optimize internal operational efficiency.</p> <br>
 
                     <h2>Discover Our Services for a Seamless Project Launch</h2> <br>
                     <h3>1. Web Development</h3> <br>
@@ -104,7 +104,7 @@
                     <br>
                     <h3>2. Search Engine
                         Optimization</h3> <br>
-                    <p>our Search Engine Optimization (SEO) services are designed to propel your product to the forefront of online visibility. Leveraging industry-leading techniques, keyword analysis, and content optimization, we fine-tune your digital assets for peak search engine performance. By aligning your product's online identity with search algorithms, we enhance organic discoverability, drive quality traffic, and cultivate sustained growth. With our dedicated focus on SEO, we ensure that your product not only reaches your desired audience but also maintains a strong and competitive digital presence.</p>
+                    <p>Our Search Engine Optimization (SEO) services are designed to propel your product to the forefront of online visibility. Leveraging industry-leading techniques, keyword analysis, and content optimization, we fine-tune your digital assets for peak search engine performance. By aligning your product's online identity with search algorithms, we enhance organic discoverability, drive quality traffic, and cultivate sustained growth. With our dedicated focus on SEO, we ensure that your product not only reaches your desired audience but also maintains a strong and competitive digital presence.</p>
 
                     <br>
                     <h3>3. Performance
