--- a/Mycura/Services.html
+++ b/Mycura/Services.html
@@ -243,23 +243,24 @@
             </section>
 
         <!--========== FOOTER ==========-->
-            <footer class="footer section bd-container">
+           <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">MyCura</a>
                     <div>
-                        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://www.facebook.com/MyCuraTechnologies" class="footer__social"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.linkedin.com/company/mycura" class="footer__social"><i class='bx bxl-linkedin'></i> </a>
+                        <a href="https://twitter.com/mycuratechno" class="footer__social"> <img src="assets/img/twittter.svg"></a>
+                        
                     </div>
                 </div>
 
                 <div class="footer__content">
                     <h3 class="footer__title">Information</h3>
                     <ul>
-                        <li  class="footer__link">Contact us</li>
-                        <li  class="footer__link">Privacy policy</li>
-                        <li  class="footer__link">Terms of services</li>
+                        
+                        <a href="Privacy.html" <li  class="footer__link">Privacy policy</li> </a>
+                       <a href="terms of services.html" <li  class="footer__link">Terms of services</li> </a>
                     </ul>
                 </div>
 
