--- a/Mycura/index.html
+++ b/Mycura/index.html
@@ -136,7 +136,7 @@
          <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">MyCura</a>
+                    <a href="#" class="footer__logo">MyCura Technologies </a>
                     <div>
                         <a href="https://www.facebook.com/MyCuraTechnologies" class="footer__social"><i class='bx bxl-facebook'></i></a>
                         <a href="https://www.linkedin.com/company/mycura" class="footer__social"><i class='bx bxl-linkedin'></i> </a>
