--- a/Mycura/index.html
+++ b/Mycura/index.html
@@ -24,7 +24,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#"><img src="assets/img/mycura 1.png" alt="" class="nav__logo"></a>
+                <a href="#"><img src="assets/img/logo.svg" alt="" class="nav__logo"></a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
